--- a/ig-ssi/src/main/res/navigation/nav_graph_ssi.xml
+++ b/ig-ssi/src/main/res/navigation/nav_graph_ssi.xml
@@ -11,7 +11,15 @@
     <fragment
         android:id="@+id/databaseFragment"
         android:name="nl.tudelft.trustchain.ssi.database.DatabaseFragment"
-        android:label="Home Screen" />
+        android:label="Home Screen" >
+        <action
+            android:id="@+id/action_databaseFragment_to_verificationFragment"
+            app:destination="@id/verificationFragment"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/fragment_fade_exit" />
+    </fragment>
     <fragment
         android:id="@+id/verificationFragment"
         android:name="nl.tudelft.trustchain.ssi.verifier.VerificationFragment"
@@ -22,7 +30,18 @@
             app:enterAnim="@anim/fragment_fade_enter"
             app:exitAnim="@anim/fragment_fade_exit"
             app:launchSingleTop="false"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/fragment_fade_exit"
             app:popUpTo="@id/nav_graph_ssi"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="qrCodeHint"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="@null" />
+        <argument
+            android:name="intent"
+            app:argType="integer"
+            android:defaultValue="-1" />
     </fragment>
 </navigation>
