--- a/ig-ssi/src/main/res/layout/item_database.xml
+++ b/ig-ssi/src/main/res/layout/item_database.xml
@@ -5,69 +5,88 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?selectableItemBackground"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/attributeNameAndValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:lines="1"
-                android:maxLines="1"
-                android:textColor="@color/text_primary"
-                android:typeface="monospace"
-                tools:text="4nmZNbpULdgYtjC2CW4NMveU8N6d4WW6" />
-
-            <TextView
-                android:id="@+id/hash"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:typeface="monospace"
-                tools:text="130.161.211.254:1873" />
-
-            <TextView
-                android:id="@+id/idformat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:typeface="monospace"
-                tools:text="00:00:00:00:00:00" />
-
-            <TextView
-                android:id="@+id/blob"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:typeface="monospace"
-                tools:text="00:00:00:00:00:00" />
-        </LinearLayout>
+        <ImageButton
+            android:id="@+id/removeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0"
+            android:background="@android:color/holo_red_dark"
+            android:minWidth="30dp"
+            android:scaleType="fitCenter"
+            android:tint="@color/white"
+            app:srcCompat="@drawable/ic_round_delete_forever_24" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:padding="16dp">
 
-            <ImageView
-                android:id="@+id/qrDBPlaceHolder"
+            <LinearLayout
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+                <TextView
+                    android:id="@+id/attributeNameAndValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:lines="1"
+                    android:maxLines="1"
+                    android:textColor="@color/text_primary"
+                    android:typeface="monospace"
+                    tools:text="4nmZNbpULdgYtjC2CW4NMveU8N6d4WW6" />
+
+                <TextView
+                    android:id="@+id/hash"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:typeface="monospace"
+                    tools:text="130.161.211.254:1873" />
+
+                <TextView
+                    android:id="@+id/idformat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:typeface="monospace"
+                    tools:text="00:00:00:00:00:00" />
+
+                <TextView
+                    android:id="@+id/blob"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:typeface="monospace"
+                    tools:text="00:00:00:00:00:00" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_qr_code" />
-        </LinearLayout>
+                android:gravity="center"
+                android:orientation="vertical">
 
+                <ImageView
+                    android:id="@+id/qrDBPlaceHolder"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_qr_code_with_magnifying_glass"
+                    android:tint="#000000" />
+            </LinearLayout>
+
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
