Rename peers fragment

--- a/ig-ssi/src/main/res/navigation/nav_graph_ssi.xml
+++ b/ig-ssi/src/main/res/navigation/nav_graph_ssi.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/peersFragment2"
-        android:name="nl.tudelft.trustchain.ssi.peers.PeersFragment"
+        android:name="nl.tudelft.trustchain.ssi.peers.Peers2Fragment"
         android:label="SSI Clients" />
     <fragment
         android:id="@+id/databaseFragment"
