--- a/ig-ssi/src/main/res/layout/fragment_peers2.xml
+++ b/ig-ssi/src/main/res/layout/fragment_peers2.xml
@@ -34,6 +34,7 @@
                     android:text="Trusted Authorities" />
 
                 <TextView
+                    android:id="@+id/txtAuthoritiesCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="? authorities" />
