--- a/ig-ssi/src/main/res/layout/item_database.xml
+++ b/ig-ssi/src/main/res/layout/item_database.xml
@@ -26,12 +26,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
+            android:baselineAligned="false" android:orientation="horizontal"
             android:padding="16dp">
 
             <LinearLayout
-                android:layout_width="300dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
 
@@ -73,8 +74,10 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="0.3"
                 android:gravity="center"
                 android:orientation="vertical">
 
