--- a/currencyii/src/main/res/layout/fragment_bitcoin.xml
+++ b/currencyii/src/main/res/layout/fragment_bitcoin.xml
@@ -189,6 +189,14 @@
                     android:text="N/A"
                     android:textSize="12sp" />
 
+                <Button
+                    android:id="@+id/add_btc"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Add BTC" />
+
             </LinearLayout>
         </ScrollView>
 
