Update Eurotoken implementations with Master

--- a/liquidity-pool/src/main/res/layout/fragment_pool_wallet.xml
+++ b/liquidity-pool/src/main/res/layout/fragment_pool_wallet.xml
@@ -62,7 +62,8 @@
                                 android:id="@+id/bitCoinAddress"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:textAlignment="textStart" />
+                                android:textAlignment="textStart"
+                                android:textSize="9sp" />
 
 
                         </LinearLayout>
@@ -82,7 +83,7 @@
                         android:padding="5dp"
                         android:text="@string/wallet_balance"
                         android:textAlignment="textStart"
-                        android:textSize="16sp"
+                        android:textSize="21sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -136,7 +137,8 @@
                                 android:id="@+id/euroTokenAddress"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:textAlignment="textStart" />
+                                android:textAlignment="textStart"
+                                android:textSize="9sp" />
 
                         </LinearLayout>
 
@@ -155,7 +157,7 @@
                         android:padding="5dp"
                         android:text="@string/wallet_balance"
                         android:textAlignment="textStart"
-                        android:textSize="16sp"
+                        android:textSize="21sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
