--- a/liquidity-pool/src/main/res/menu/liquidity_navigation_menu.xml
+++ b/liquidity-pool/src/main/res/menu/liquidity_navigation_menu.xml
@@ -9,13 +9,17 @@
     <item
         android:id="@+id/JoinPoolFragment"
         android:icon="@drawable/ic_add_black_24dp"
-        android:title="Join" />
+        android:title="Join Pool" />
     <item
         android:id="@+id/poolFragment"
         android:icon="@drawable/ic_device_hub_black_24dp"
-        android:title="Exchange" />
+        android:title="Pool (BTC-EUR)" />
     <item
         android:id="@+id/poolOwnerFragment"
         android:icon="@android:drawable/ic_menu_myplaces"
-        android:title="Pool" />
+        android:title="Pool Owner" />
+    <item
+        android:id="@+id/poolBitcoinEthereumFragment"
+        android:icon="@drawable/ic_liquid"
+        android:title="Pool (BTC-ETH)" />
 </menu>
