--- a/ig-ssi/src/main/res/layout/item_database.xml
+++ b/ig-ssi/src/main/res/layout/item_database.xml
@@ -29,6 +29,15 @@
             android:baselineAligned="false" android:orientation="horizontal"
             android:padding="16dp">
 
+            <ImageView
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"
+                tools:srcCompat="@tools:sample/avatars"
+                android:id="@+id/pictureView"
+                android:layout_weight="0.5"
+                android:visibility="gone"
+                android:paddingRight="5dp" />
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -77,7 +86,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
-                android:layout_weight="0.3"
+                android:layout_weight="0.7"
                 android:gravity="center"
                 android:orientation="vertical">
 
