--- a/ig-ssi/src/main/res/layout/present_attestation_dialog.xml
+++ b/ig-ssi/src/main/res/layout/present_attestation_dialog.xml
@@ -8,6 +8,17 @@
 
 
     <ImageView
+        app:layout_constraintBottom_toTopOf="@id/qrCodeView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:srcCompat="@tools:sample/avatars"
+        android:visibility="gone"
+        android:id="@+id/pictureValueView" />
+
+    <ImageView
         android:id="@+id/qrCodeView"
         android:layout_width="350dp"
         android:layout_height="350dp"
@@ -42,6 +53,30 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/timeoutProgressBar"
+        android:visibility="invisible"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/qrCodeView"
+        android:padding="10dp"
+        android:progress="100" />
+
+    <Switch
+        app:layout_constraintTop_toBottomOf="@id/qrCodeView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="Switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/QRSwitch"
+        android:visibility="gone"
+        android:textOff="Display first QR code" />
 
     <View
         android:layout_width="0dp"
