--- a/ig-ssi/src/main/res/layout/request_attestation_dialog.xml
+++ b/ig-ssi/src/main/res/layout/request_attestation_dialog.xml
@@ -3,61 +3,96 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:orientation="vertical">
 
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/select_attribute"
-        android:id="@+id/textView" />
+        android:layout_height="match_parent"
+        android:id="@+id/findPeerContent">
 
-    <Spinner
-        android:id="@+id/attributeNameSpinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <ProgressBar
+            android:id="@+id/findPeerProgressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:indeterminateTint="@android:color/holo_red_dark"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/name_input"
+        <TextView
+            app:layout_constraintTop_toBottomOf="@id/findPeerProgressBar"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="@string/locating_client"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/content"
         android:visibility="gone"
-        android:backgroundTint="@android:color/holo_red_dark"
-        android:hint="@string/attribute_name"
-        android:textCursorDrawable="@null" />
+        android:padding="10dp">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/select_proof_type"
-        android:id="@+id/textView1" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/select_attribute"
+            android:id="@+id/textView" />
 
-    <Spinner
-        android:id="@+id/idFormatSpinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <Spinner
+            android:id="@+id/attributeNameSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/value_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/holo_red_dark"
-        android:hint="@string/requested_value"
-        android:textCursorDrawable="@null" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/name_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:backgroundTint="@android:color/holo_red_dark"
+            android:hint="@string/attribute_name"
+            android:textCursorDrawable="@null" />
 
-    <Button
-        android:text="@string/select_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:id="@+id/select_image_button" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/select_proof_type"
+            android:id="@+id/textView1" />
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:srcCompat="@tools:sample/avatars"
-        android:visibility="gone"
-        android:id="@+id/id_picture_view" />
+        <Spinner
+            android:id="@+id/idFormatSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/value_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/holo_red_dark"
+            android:hint="@string/requested_value"
+            android:textCursorDrawable="@null" />
 
+        <Button
+            android:text="@string/select_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:id="@+id/select_image_button" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:srcCompat="@tools:sample/avatars"
+            android:visibility="gone"
+            android:id="@+id/id_picture_view" />
+
+    </LinearLayout>
 </LinearLayout>
