Rename value dialog + make navigation consistent with expected behaviour + improve usability

--- a/ig-ssi/src/main/res/layout/fragment_peers2.xml
+++ b/ig-ssi/src/main/res/layout/fragment_peers2.xml
@@ -68,7 +68,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="sans-serif-medium"
-                    tools:text="DiscoveryCommunity" />
+                    tools:text="IdentityCommunity" />
 
                 <TextView
                     android:id="@+id/txtPeerCount"
