--- a/valuetransfer/src/main/res/layout/item_identity_business_detail.xml
+++ b/valuetransfer/src/main/res/layout/item_identity_business_detail.xml
@@ -146,74 +146,135 @@
         </LinearLayout>
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/tvBusinessPublicKeyTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Public Key"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/llRowTwo" />
-
-    <TextView
-        android:id="@+id/tvBusinessPublicKeyValue"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="BN3ae0ab1e6fd16d950a1d5fffdef41ae2d6c225"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvBusinessPublicKeyTitle" />
-
     <LinearLayout
-        android:id="@+id/llRowButtons"
-        android:layout_width="match_parent"
+        android:id="@+id/llColOneRowThree"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:orientation="horizontal"
-        android:weightSum="3"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBusinessPublicKeyValue">
+        app:layout_constraintTop_toBottomOf="@+id/llRowTwo"
+        app:layout_constraintEnd_toStartOf="@+id/btnBusinessQRCode">
 
-        <Button
-            android:id="@+id/btnQRCode"
-            android:layout_width="0dp"
-            android:layout_height="35dp"
-            android:layout_marginEnd="4dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_rounded"
-            android:backgroundTint="@color/colorPrimaryValueTransfer"
-            android:text="Show QR-code"
-            android:textColor="@color/white"
-            android:textSize="12sp" />
+        <TextView
+            android:id="@+id/tvBusinessPublicKeyTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Public Key"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/btnCopyPublicKey"
-            android:layout_width="0dp"
-            android:layout_height="35dp"
-            android:layout_marginEnd="4dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_rounded"
-            android:backgroundTint="@color/colorPrimaryValueTransfer"
-            android:paddingVertical="4dp"
-            android:text="Copy Key"
-            android:textColor="@color/white"
-            android:textSize="12sp" />
-
-        <Button
-            android:id="@+id/btnEditIdentity"
-            android:layout_width="0dp"
-            android:layout_height="35dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_rounded"
-            android:backgroundTint="@color/colorPrimaryValueTransfer"
-            android:paddingVertical="4dp"
-            android:text="Edit Identity"
-            android:textColor="@color/white"
-            android:textSize="12sp" />
-
+        <TextView
+            android:id="@+id/tvBusinessPublicKeyValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:text="4c69624e61434c504b3af0b7d61043e1043cdde4285074fe547f7e0ef20448207948dee70ad27579be698f9da2afc0dae3cb6ddd9bd5120441f8fbe579e2553bbd6dbf7965581294dbe3"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tvBusinessPublicKeyTitle" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btnBusinessQRCode"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/ic_qr_code_scan"
+        app:layout_constraintEnd_toStartOf="@+id/btnBusinessCopyPublicKey"
+        app:layout_constraintStart_toEndOf="@+id/llColOneRowThree"
+        app:layout_constraintBottom_toBottomOf="@+id/llColOneRowThree"/>
+
+    <Button
+        android:id="@+id/btnBusinessCopyPublicKey"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/ic_copy_public_key"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/llColOneRowThree"/>
+
+
+
+
+
+
+
+
+<!--    <TextView-->
+<!--        android:id="@+id/tvBusinessPublicKeyTitle"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:text="Public Key"-->
+<!--        android:textSize="14sp"-->
+<!--        android:textStyle="bold"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/llRowTwo" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/tvBusinessPublicKeyValue"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="BN3ae0ab1e6fd16d950a1d5fffdef41ae2d6c225"-->
+<!--        android:textSize="12sp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/tvBusinessPublicKeyTitle" />-->
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/llRowButtons"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="12dp"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:weightSum="3"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/tvBusinessPublicKeyValue">-->
+
+<!--        <Button-->
+<!--            android:id="@+id/btnBusinessQRCode"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="35dp"-->
+<!--            android:layout_marginEnd="4dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:background="@drawable/button_rounded"-->
+<!--            android:backgroundTint="@color/colorPrimaryValueTransfer"-->
+<!--            android:text="Show QR-code"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="12sp" />-->
+
+<!--        <Button-->
+<!--            android:id="@+id/btnBusinessCopyPublicKey"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="35dp"-->
+<!--            android:layout_marginEnd="4dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:background="@drawable/button_rounded"-->
+<!--            android:backgroundTint="@color/colorPrimaryValueTransfer"-->
+<!--            android:paddingVertical="4dp"-->
+<!--            android:text="Copy Key"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="12sp" />-->
+
+<!--        <Button-->
+<!--            android:id="@+id/btnEditIdentity"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="35dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:background="@drawable/button_rounded"-->
+<!--            android:backgroundTint="@color/colorPrimaryValueTransfer"-->
+<!--            android:paddingVertical="4dp"-->
+<!--            android:text="Edit Identity"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="12sp" />-->
+
+<!--    </LinearLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
