--- a/valuetransfer/src/main/res/layout/fragment_identity.xml
+++ b/valuetransfer/src/main/res/layout/fragment_identity.xml
@@ -130,10 +130,10 @@
             app:layout_constraintTop_toTopOf="@+id/clHeaderPersonalIdentities" />
 
         <Button
-            android:id="@+id/btnOptionsPersonalIdentity"
+            android:id="@+id/btnAddPersonalIdentity"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/ic_baseline_more_vert_24"
+            android:background="@drawable/ic_baseline_add_24"
             android:backgroundTint="@color/colorPrimaryValueTransfer"
             app:layout_constraintBottom_toBottomOf="@+id/clHeaderPersonalIdentities"
             app:layout_constraintEnd_toEndOf="@+id/clHeaderPersonalIdentities"
@@ -147,7 +147,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingHorizontal="12dp"
-            android:paddingVertical="8dp"
+            android:paddingVertical="16dp"
             android:text="Please add a personal identity"
             android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
@@ -196,10 +196,10 @@
             app:layout_constraintTop_toTopOf="@+id/clHeaderBusinessIdentities" />
 
         <Button
-            android:id="@+id/btnOptionsBusinessIdentity"
+            android:id="@+id/btnAddBusinessIdentity"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/ic_baseline_more_vert_24"
+            android:background="@drawable/ic_baseline_add_24"
             android:backgroundTint="@color/colorPrimaryValueTransfer"
             app:layout_constraintBottom_toBottomOf="@+id/clHeaderBusinessIdentities"
             app:layout_constraintEnd_toEndOf="@+id/clHeaderBusinessIdentities"
@@ -207,11 +207,24 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <TextView
+            android:id="@+id/tvNoBusinessIdentities"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingHorizontal="12dp"
+            android:paddingVertical="16dp"
+            android:text="There are no business identities"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/clHeaderBusinessIdentities" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBusinessIdentities"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/clHeaderBusinessIdentities"
+        app:layout_constraintTop_toBottomOf="@+id/tvNoBusinessIdentities"
         tools:itemCount="1"
         tools:listitem="@layout/item_identity_business_detail" />
 
