--- a/valuetransfer/src/main/res/menu/business_identity_options.xml
+++ b/valuetransfer/src/main/res/menu/business_identity_options.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/actionAddBusinessIdentity"
-        android:icon="@drawable/ic_device_hub_black_24dp"
-        android:title="Add" />
+        android:id="@+id/actionEditBusinessIdentity"
+        android:title="Edit" />
+
+    <item
+        android:id="@+id/actionRemoveBusinessIdentity"
+        android:title="Remove" />
 
 </menu>
